<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="title">My Nano Degree Apps!</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Scores App</string>
    <string name="app3">Library App</string>
    <string name="app4">Build It Bigger</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">Capstone: My App</string>
</resources>
